--- a/index.html
+++ b/index.html
@@ -42,45 +42,43 @@
 
   <style>
   .videos {
-    display: flex;  /* 使用flexbox */
-    flex-wrap: nowrap;  /* 防止换行 */
-    justify-content: center; /* 水平居中视频块 */
-    align-items: center; /* 垂直居中视频块 */
-    /* height: 100vh; 让容器的高度占满视口 */
+    display: flex;  
+    flex-wrap: nowrap;  
+    justify-content: center; 
+    align-items: center; 
   }
 
   .video {
-    margin: 0;  /* 给每个视频块添加一点水平间隔 */
-    text-align: center;  /* 居中文本 */
+    margin: 0;  
+    text-align: center; 
   }
 
   .video p {
-    font-weight: normal;  /* 加粗字体 */
+    font-weight: normal;  
   }
 
   .text-container {
-  display: flex;            /* 使用flexbox */
-  justify-content: center;  /* 水平居中 */
-  align-items: center;      /* 垂直居中 */
-  /* height: 100vh;            占满视口高度 */
-  text-align: center;       /* 使文本在其容器内居中 */
+  display: flex;            
+  justify-content: center;  
+  align-items: center;      
+  /* height: 100vh;          
+  text-align: center;       
 }
 
 .custom-font-size {
-  font-size: 18px; /* 自定义字体大小 */
-  font-weight: normal; /* 你可以根据需要设置字体加粗或不加粗 */
-  margin-top: -40px;         /* 将文本向上移动50px，调整此值以改变移动距离 */
-}
+  font-size: 18px; 
+  font-weight: normal; 
+  margin-top: -40px;       
 
 .title {
-  text-align: center;  /* 水平居中 */
-  margin-bottom: 20px;  /* 给标题和视频之间增加一点空间 */
+  text-align: center;  
+  margin-bottom: 20px;  
 }
 
 .subtitle {
-  text-align: center;  /* 水平居中 */
-  margin-bottom: 30px;  /* 给子标题和视频块之间增加空间 */
-  font-weight: bold;  /* 子标题的默认字体粗细 */
+  text-align: center;  
+  margin-bottom: 30px;  
+  font-weight: bold;  
 }
   </style>
 </head>
@@ -121,7 +119,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://scholar.google.com/citations?user=MbVZAGQAAAAJ&hl=zh-CN"
+                <a href="https://hanxinzhu-lab.github.io/AR4D/"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -130,7 +128,7 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href="https://scholar.google.com/citations?user=MbVZAGQAAAAJ&hl=zh-CN"
+                <a href="https://hanxinzhu-lab.github.io/AR4D/"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -150,7 +148,7 @@
               </span> -->
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https://scholar.google.com/citations?user=MbVZAGQAAAAJ&hl=zh-CN"
+                <a href="https://hanxinzhu-lab.github.io/AR4D/"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
