--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 
   <style>
   .videos {
-    display: flex;  
-    flex-wrap: nowrap;  
-    justify-content: center; 
-    align-items: center; 
+    display: flex;  /* 使用flexbox */
+    flex-wrap: nowrap;  /* 防止换行 */
+    justify-content: center; /* 水平居中视频块 */
+    align-items: center; /* 垂直居中视频块 */
   }
 
   .video {
@@ -58,17 +58,17 @@
   }
 
   .text-container {
-  display: flex;            
+  display: flex;           
   justify-content: center;  
-  align-items: center;      
-  /* height: 100vh;          
+  align-items: center;     
   text-align: center;       
 }
 
 .custom-font-size {
   font-size: 18px; 
   font-weight: normal; 
-  margin-top: -40px;       
+  margin-top: -40px;         
+}
 
 .title {
   text-align: center;  
