--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 
   <style>
   .videos {
-    display: flex;  /* 使用flexbox */
-    flex-wrap: nowrap;  /* 防止换行 */
-    justify-content: center; /* 水平居中视频块 */
-    align-items: center; /* 垂直居中视频块 */
+    display: flex; 
+    flex-wrap: nowrap;  
+    justify-content: center; 
+    align-items: center; 
   }
 
   .video {
@@ -187,7 +187,7 @@
           <source src="./static/videos/ref_video_0.mp4" type="video/mp4">
           Your browser does not support the video tag.
       </video>
-      <p>(a) Input Video</p>
+      <p><strong>(a) Input Video</strong></p>
   </div>
   <div class="video">
       <video controls loop autoplay muted width="256" height="256">
@@ -210,6 +210,20 @@
       </video>
       <p>(d) Novel-view Video 2</p>
   </div>
+  <div class="video">
+    <video controls loop autoplay muted width="256" height="256">
+        <source src="./static/videos/pistol_multi_view.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+    <p>(e) Rendered Multi-view Video</p>
+</div>
+<div class="video">
+  <video controls loop autoplay muted width="256" height="256">
+      <source src="./static/videos/pistol_multi_view_depth.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+  </video>
+  <p>(f) Rendered Multi-view Depth</p>
+</div>
   <!-- Add other video blocks as needed -->
 </div>
 
@@ -220,7 +234,7 @@
           <source src="./static/videos/ref_video_1.mp4" type="video/mp4">
           Your browser does not support the video tag.
       </video>
-      <p>(a) Input Video</p>
+      <p><strong>(a) Input Video</strong></p>
   </div>
   <div class="video">
       <video controls loop autoplay muted width="256" height="256">
@@ -243,6 +257,20 @@
       </video>
       <p>(d) Novel-view Video 2</p>
   </div>
+  <div class="video">
+    <video controls loop autoplay muted width="256" height="256">
+        <source src="./static/videos/kitten_multi_view.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+    <p>(e) Rendered Multi-view Video</p>
+</div>
+<div class="video">
+  <video controls loop autoplay muted width="256" height="256">
+      <source src="./static/videos/kitten_multi_view_depth.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+  </video>
+  <p>(f) Rendered Multi-view Depth</p>
+</div>
   <!-- Add other video blocks as needed -->
 </div>
 
@@ -253,7 +281,7 @@
           <source src="./static/videos/ref_video_2.mp4" type="video/mp4">
           Your browser does not support the video tag.
       </video>
-      <p>(a) Input Video</p>
+      <p><strong>(a) Input Video</strong></p>
   </div>
   <div class="video">
       <video controls loop autoplay muted width="256" height="256">
@@ -276,6 +304,20 @@
       </video>
       <p>(d) Novel-view Video 2</p>
   </div>
+  <div class="video">
+    <video controls loop autoplay muted width="256" height="256">
+        <source src="./static/videos/sword_multi_view.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+    <p>(e) Rendered Multi-view Video</p>
+</div>
+<div class="video">
+  <video controls loop autoplay muted width="256" height="256">
+      <source src="./static/videos/sword_multi_view_depth.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+  </video>
+  <p>(f) Rendered Multi-view Depth</p>
+</div>
   <!-- Add other video blocks as needed -->
 </div>
 
